--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 </head>
 <body>
   <header>
-    <h1>TOWER of HANOI</h1>
+    
+    <h1>Game 2</h1>
+
+    <h2>For Any Technical Problem Connect +91 xxxxxxx & simran@gmail.com </h2>
+    
     <div class="moves">MOVES: 0</div>
   </header>
   <div class="container">
